--- a/GameEditor/Base.lproj/ValueEditors.xib
+++ b/GameEditor/Base.lproj/ValueEditors.xib
@@ -573,7 +573,7 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="19" id="EhP-Ao-tGM"/>
                     </constraints>
-                    <popUpButtonCell key="cell" type="push" title="Path" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" tag="6" imageScaling="proportionallyDown" inset="2" selectedItem="NdT-1Q-3qC" id="ZFq-kA-QlT">
+                    <popUpButtonCell key="cell" type="push" title="Edges" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" tag="6" imageScaling="proportionallyDown" inset="2" selectedItem="tEw-cs-G5O" id="ZFq-kA-QlT">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="smallSystem"/>
                         <menu key="menu" id="sqd-aY-QHP">
@@ -590,10 +590,10 @@
                                     <modifierMask key="keyEquivalentModifierMask"/>
                                 </menuItem>
                                 <menuItem isSeparatorItem="YES" id="PL6-UC-fbC"/>
-                                <menuItem title="Edges" tag="5" id="tEw-cs-G5O">
+                                <menuItem title="Path" tag="5" id="NdT-1Q-3qC">
                                     <modifierMask key="keyEquivalentModifierMask"/>
                                 </menuItem>
-                                <menuItem title="Path" state="on" tag="6" id="NdT-1Q-3qC">
+                                <menuItem title="Edges" state="on" tag="6" id="tEw-cs-G5O">
                                     <modifierMask key="keyEquivalentModifierMask"/>
                                 </menuItem>
                             </items>
